Wed Aug 22 22:16:03 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

	* *{pl,-conf}.in: Oops, forgot about the .in suffix of files
	that haven't been processed. Put the prefix if the backend is
	the .in version.

	* *.pl.in: Ah, change had to go here too.

	* *-conf.in: Check for ___scriptsdir___ value. If it is
	___scriptsdir__, then require files on the pwd. This way we
	can call backend-conf.in directly, and without make installing.

2001-08-23  Hans Petter Jansson  <hpj@ximian.com>

	* report.pl.in: Add report messages for filesys mount/unmount.
	Fix a random typo I noticed.

	* filesys.pl.in (xst_filesys_mount_on): Add error reporting.
	(xst_filesys_mount_off): Add error reporting.

2001-08-22  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in (x_probe_load): use xst_file_* instead of open.
	(x_probe_store): ditto.
	Disable modelines for now. Misc updates.
	(x_probe_run): Removed some debugging messages.

2001-08-21  Arturo Espinosa Aldama  <arturo@ximian.com>

	* general.pl.in (xst_directive_run): Report the directive that
	is being processed.
	(xst_end_directive): close all debug before exit. Just paranoic.

2001-08-20  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in: Made probe caching. Removed some debugging messages.
	Continued work on probe_* functions.

	* display-conf.in: Use portable copy and delete functions.
	(test): Get better temp file.
	(probe): Probe could have arguments.

2001-08-17  Arturo Espinosa Aldama  <arturo@ximian.com>

	* boot.pl.in (xst_boot_parse_global_kw): Report that no lilo.conf
	was found.
	(xst_boot_parse_global): same.
	(xst_boot_parse_images): same.

	* general.pl.in (xst_directive_run): Send a begin report whenever
	a directive is run, except for "end".
	Some other function name changes.

	* *.in: s/&xst_end (/&xst_report_end (/;
	
	* report.pl.in (xst_report_begin): Moved from general.pl.in:xst_begin.
	(xst_report_end): same.

Thu Aug 16 02:02:18 2001  Arturo Espinosa Aldama  <arturo@ximian.com>
